--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ header {
     font-size: 0.9rem;
     opacity: 0.9;
     font-weight: 400;
+    align-item: center;
 }
 
 /* Bekas Butang Kanan */
@@ -395,3 +396,4 @@ footer {
         font-size: 0.85rem;
     }
 }
+
