--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
     font-size: 0.9rem;
     opacity: 0.9;
     font-weight: 400;
-    align-item: center;
+    text-align: center;
 }
 
 /* Bekas Butang Kanan */
@@ -396,4 +396,5 @@ footer {
         font-size: 0.85rem;
     }
 }
+
 
